--- a/flu_deep_sequencing.ipynb
+++ b/flu_deep_sequencing.ipynb
@@ -965,7 +965,16 @@
    "metadata": {},
    "source": [
     "307: CCG -> UCG (P)\n",
+    "\n",
     "1458: UAU -> UAC (Y) no amino acid change"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "According to epitope locations listed in Munoz et al, residue 307 is part of epitope C.\n",
+    "It is one of three regions (A-C) that are important for recognition by antibodies."
    ]
   }
  ],
