--- a/flu_deep_sequencing.ipynb
+++ b/flu_deep_sequencing.ipynb
@@ -308,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare variants, -d 35000, since coverage is ~ 32000"
+    "## Prepare variants, -d 40000, since coverage is ~ 32000"
    ]
   },
   {
@@ -325,7 +325,7 @@
     }
    ],
    "source": [
-    "!samtools mpileup -d 35000 -f influenza_h_ref.fasta roommate_sorted.bam >  my.mpileup"
+    "!samtools mpileup -d 40000 -f influenza_h_ref.fasta roommate_sorted.bam >  my.mpileup"
    ]
   },
   {
@@ -396,11 +396,11 @@
    "metadata": {},
    "source": [
     "There 5 snps:\n",
-    "1) ACA -> ACG, no amino acid change\n",
-    "2) GCC -> GCU, no amino acid change\n",
-    "3) UUU -> UUC, no amino acid change\n",
-    "4) GGC -> GGU, no amino acid change\n",
-    "5) CUA -> CUC, no amino acid change"
+    "1. ACA -> ACG, no amino acid change\n",
+    "2. GCC -> GCU, no amino acid change\n",
+    "3. UUU -> UUC, no amino acid change\n",
+    "4. GGC -> GGU, no amino acid change\n",
+    "5. CUA -> CUC, no amino acid change"
    ]
   },
   {
@@ -768,7 +768,7 @@
     }
    ],
    "source": [
-    "!samtools mpileup -d 25000 -f influenza_h_ref.fasta control_1_sorted.bam > control_1.mpileup"
+    "!samtools mpileup -d 40000 -f influenza_h_ref.fasta control_1_sorted.bam > control_1.mpileup"
    ]
   },
   {
@@ -785,7 +785,7 @@
     }
    ],
    "source": [
-    "!samtools mpileup -d 25000 -f influenza_h_ref.fasta control_2_sorted.bam > control_2.mpileup"
+    "!samtools mpileup -d 40000 -f influenza_h_ref.fasta control_2_sorted.bam > control_2.mpileup"
    ]
   },
   {
@@ -802,7 +802,7 @@
     }
    ],
    "source": [
-    "!samtools mpileup -d 25000 -f influenza_h_ref.fasta control_3_sorted.bam > control_3.mpileup"
+    "!samtools mpileup -d 40000 -f influenza_h_ref.fasta control_3_sorted.bam > control_3.mpileup"
    ]
   },
   {
@@ -973,9 +973,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to epitope locations listed in Munoz et al, residue 307 is part of epitope C.\n",
+    "According to epitope locations listed in Munoz et al, residue 307 % 3 + 1 = 103 is part of epitope D.\n",
     "It is one of three regions (A-C) that are important for recognition by antibodies."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
